--- a/public/sass/button.scss
+++ b/public/sass/button.scss
@@ -2,14 +2,18 @@
 @import "_colors";
 
 .button {
+  font-family: "Soho Gothic Pro";
+
   display: inline-block;
-  outline: none;
-  height: 28px;
   padding: 0 7px 0 12px;
   box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.25);
-
-  font: 20.8px "Soho Gothic", Helvetica, Arial, sans-serif;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.45);
+
+  letter-spacing: 0.5px;
+
+  line-height: 180%;
+  text-decoration: none;
+  outline: none;
 
   color: $button_text_color;
 
