--- a/public/sass/main_menu.scss
+++ b/public/sass/main_menu.scss
@@ -12,7 +12,7 @@
 }
 
 .main-menu-item {
-  font: 15px "Soho Gothic", Helvetica, Arial, sans-serif;
+  font: 15px "Soho Gothic Pro", Helvetica, Arial, sans-serif;
   line-height: 17px;
 
   display: inline-block;
