--- a/public/sass/_colors.scss
+++ b/public/sass/_colors.scss
@@ -1,3 +1,6 @@
+$main-blue: #468fc5;
+$main-grey: #5a5a59;
+
 // BUTTON
 
 $button_text_color: #fff;
@@ -25,6 +28,9 @@ $button_press_gradient_bottom_color: #6eb238;
 
 // MAIN MENU
 
-$main_menu_text_color: #468fc5;
-$main_menu_active_text_color: #5a5a59;
+$main_menu_text_color: $main-blue;
+$main_menu_active_text_color: $main-grey;
 $main_menu_active_bg_color: #d5d5d5;
+
+// RIGHT BLOCKS
+$quote_box_header_color: $main-blue;
