--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,6 +1,8 @@
+@import "_colors";
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 15px "Soho Gothic Pro", Arial, sans-serif;
 }
 
 a {
