--- a/public/sass/_colors.scss
+++ b/public/sass/_colors.scss
@@ -34,3 +34,9 @@ $main_menu_active_bg_color: #d5d5d5;
 
 // RIGHT BLOCKS
 $quote_box_header_color: $main-blue;
+
+// SUB-HEADER
+$subheader_container_border_top_color: #2d79ad;
+$subheader_container_border_bottom_color: #fff;
+$subheader_gradient_top_color: #7ac1de;
+$subheader_gradient_bottom_color: #4089c2;
