--- a/public/sass/main_menu.scss
+++ b/public/sass/main_menu.scss
@@ -1,4 +1,5 @@
 @import "_colors";
+@import "_mixins";
 
 .main-menu {
   &, & > li {
@@ -9,6 +10,18 @@
 
   display: block;
   background: rgba(0, 0, 0, 0);
+
+  &--collapsable {
+    @include responsive(800) {
+      display: none;
+    }
+  }
+  &--sandwich {
+    display: none;
+    @include responsive(800) {
+      display: block;
+    }
+  }
 }
 
 .main-menu-item {
@@ -18,7 +31,7 @@
   display: inline-block;
   background: rgba(0, 0, 0, 0);
 
-  padding: 5px 7px;
+  padding: 5px 8px;
 
   &__link {
     display: inline-block;
@@ -26,6 +39,7 @@
     outline: none;
     color: $main_menu_text_color;
     line-height: 17px;
+    border-bottom: 1px solid rgba(0,0,0,0);
 
     &--hover, &:hover {
       text-decoration: none;
@@ -35,6 +49,7 @@
 
   &--active {
     background-color: $main_menu_active_bg_color;
+    padding: 5px 10px;
   }
   &--active &__link {
     color: $main_menu_active_text_color;
