--- a/public/sass/main_menu.scss
+++ b/public/sass/main_menu.scss
@@ -22,6 +22,15 @@
       display: block;
     }
   }
+  &--listable {
+    display: none;
+    @include responsive(700) {
+      display: block;
+      .main-menu-item {
+        display: block;
+      }
+    }
+  }
 }
 
 .main-menu-item {
