--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,6 +252,15 @@
     font: 22.94px "Soho Gothic Pro", Arial, sens-serif;
     color: rgba(23, 20, 18, 0.5);
     text-transform: uppercase; }
+    @media screen and (max-width: 599px) {
+      .header-logo__text {
+        display: none; } }
+    .w400 .header-logo__text {
+      display: none; }
+    .w320 .header-logo__text {
+      display: none; }
+    .w280 .header-logo__text {
+      display: none; }
 
 .subheader-container {
   display: block;
@@ -288,12 +297,34 @@
     display: table-cell;
     text-align: center;
     vertical-align: middle; }
+    @media screen and (max-width: 699px) {
+      .subheader__title {
+        font: 18px "Soho Gothic Pro", Arial, sens-serif; } }
+    .w600 .subheader__title {
+      font: 18px "Soho Gothic Pro", Arial, sens-serif; }
+    .w400 .subheader__title {
+      font: 18px "Soho Gothic Pro", Arial, sens-serif; }
+    .w320 .subheader__title {
+      font: 18px "Soho Gothic Pro", Arial, sens-serif; }
+    .w280 .subheader__title {
+      font: 18px "Soho Gothic Pro", Arial, sens-serif; }
 
 .app-links-container {
   background-color: #e7e6e6;
   height: 120px;
   margin-bottom: 25px;
   position: relative; }
+  @media screen and (max-width: 699px) {
+    .app-links-container {
+      height: auto; } }
+  .w600 .app-links-container {
+    height: auto; }
+  .w400 .app-links-container {
+    height: auto; }
+  .w320 .app-links-container {
+    height: auto; }
+  .w280 .app-links-container {
+    height: auto; }
   .app-links-container__shadow {
     overflow-y: hidden;
     position: absolute;
@@ -316,16 +347,64 @@
   width: 100%;
   box-sizing: border-box;
   padding: 0 30px; }
+  @media screen and (max-width: 699px) {
+    .app-links {
+      display: block;
+      padding: 15px 30px; } }
+  .w600 .app-links {
+    display: block;
+    padding: 15px 30px; }
+  .w400 .app-links {
+    display: block;
+    padding: 15px 30px; }
+  .w320 .app-links {
+    display: block;
+    padding: 15px 30px; }
+  .w280 .app-links {
+    display: block;
+    padding: 15px 30px; }
   .app-links__element {
     display: table-cell;
     text-align: center;
     vertical-align: top;
     width: 33.333%; }
+    @media screen and (max-width: 699px) {
+      .app-links__element {
+        display: block;
+        text-align: left;
+        width: auto; } }
+    .w600 .app-links__element {
+      display: block;
+      text-align: left;
+      width: auto; }
+    .w400 .app-links__element {
+      display: block;
+      text-align: left;
+      width: auto; }
+    .w320 .app-links__element {
+      display: block;
+      text-align: left;
+      width: auto; }
+    .w280 .app-links__element {
+      display: block;
+      text-align: left;
+      width: auto; }
 
 .app-link {
   display: inline-block;
   text-decoration: none;
   outline: none; }
+  @media screen and (max-width: 699px) {
+    .app-link {
+      margin-bottom: 10px; } }
+  .w600 .app-link {
+    margin-bottom: 10px; }
+  .w400 .app-link {
+    margin-bottom: 10px; }
+  .w320 .app-link {
+    margin-bottom: 10px; }
+  .w280 .app-link {
+    margin-bottom: 10px; }
   .app-link__img {
     margin-top: -25px;
     margin-bottom: 3px;
@@ -337,24 +416,89 @@
     box-sizing: content-box;
     width: 100px;
     height: 100px; }
+    @media screen and (max-width: 699px) {
+      .app-link__img {
+        margin-top: 0;
+        width: 30px;
+        height: 30px;
+        box-sizing: border-box; } }
+    .w600 .app-link__img {
+      margin-top: 0;
+      width: 30px;
+      height: 30px;
+      box-sizing: border-box; }
+    .w400 .app-link__img {
+      margin-top: 0;
+      width: 30px;
+      height: 30px;
+      box-sizing: border-box; }
+    .w320 .app-link__img {
+      margin-top: 0;
+      width: 30px;
+      height: 30px;
+      box-sizing: border-box; }
+    .w280 .app-link__img {
+      margin-top: 0;
+      width: 30px;
+      height: 30px;
+      box-sizing: border-box; }
     .app-link--hover .app-link__img, .app-link:hover .app-link__img {
       margin-top: -28px;
       margin-bottom: 0;
       width: 106px;
       height: 106px;
       background-color: rgba(255, 255, 255, 0.6); }
+      @media screen and (max-width: 699px) {
+        .app-link--hover .app-link__img, .app-link:hover .app-link__img {
+          margin-top: 0;
+          width: 30px;
+          height: 30px; } }
+      .w600 .app-link--hover .app-link__img, .w600 .app-link:hover .app-link__img {
+        margin-top: 0;
+        width: 30px;
+        height: 30px; }
+      .w400 .app-link--hover .app-link__img, .w400 .app-link:hover .app-link__img {
+        margin-top: 0;
+        width: 30px;
+        height: 30px; }
+      .w320 .app-link--hover .app-link__img, .w320 .app-link:hover .app-link__img {
+        margin-top: 0;
+        width: 30px;
+        height: 30px; }
+      .w280 .app-link--hover .app-link__img, .w280 .app-link:hover .app-link__img {
+        margin-top: 0;
+        width: 30px;
+        height: 30px; }
       .app-link--hover .app-link__img:before, .app-link:hover .app-link__img:before {
-        content: ""; }
+        background-color: #fff;
+        border: #c3c3c3 1px solid; }
     .app-link__img:before {
       position: absolute;
+      content: "";
       top: 3px;
       left: 3px;
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      background-color: #fff;
-      border: #c3c3c3 1px solid;
+      background-color: transparent;
+      border: transparent 1px solid;
       box-sizing: border-box; }
+      @media screen and (max-width: 699px) {
+        .app-link__img:before {
+          width: 30px;
+          height: 30px; } }
+      .w600 .app-link__img:before {
+        width: 30px;
+        height: 30px; }
+      .w400 .app-link__img:before {
+        width: 30px;
+        height: 30px; }
+      .w320 .app-link__img:before {
+        width: 30px;
+        height: 30px; }
+      .w280 .app-link__img:before {
+        width: 30px;
+        height: 30px; }
     .app-link__img img {
       position: absolute;
       z-index: 10;
@@ -363,10 +507,42 @@
       left: -9999px;
       right: -9999px;
       margin: auto; }
+      @media screen and (max-width: 699px) {
+        .app-link__img img {
+          height: 35px; } }
+      .w600 .app-link__img img {
+        height: 35px; }
+      .w400 .app-link__img img {
+        height: 35px; }
+      .w320 .app-link__img img {
+        height: 35px; }
+      .w280 .app-link__img img {
+        height: 35px; }
   .app-link__title {
     display: block;
     color: #000;
     font: 16px "Soho Gothic Pro", Arial, sens-serif; }
+    @media screen and (max-width: 699px) {
+      .app-link__title {
+        display: inline-block;
+        margin-left: 20px;
+        vertical-align: top; } }
+    .w600 .app-link__title {
+      display: inline-block;
+      margin-left: 20px;
+      vertical-align: top; }
+    .w400 .app-link__title {
+      display: inline-block;
+      margin-left: 20px;
+      vertical-align: top; }
+    .w320 .app-link__title {
+      display: inline-block;
+      margin-left: 20px;
+      vertical-align: top; }
+    .w280 .app-link__title {
+      display: inline-block;
+      margin-left: 20px;
+      vertical-align: top; }
 
 /*
 @mixin make-row($columns) {
@@ -392,6 +568,8 @@
     display: none; }
   .w320 .main-menu--collapsable {
     display: none; }
+  .w280 .main-menu--collapsable {
+    display: none; }
   .main-menu--sandwich {
     display: none; }
     @media screen and (max-width: 799px) {
@@ -405,6 +583,31 @@
       display: block; }
     .w320 .main-menu--sandwich {
       display: block; }
+    .w280 .main-menu--sandwich {
+      display: block; }
+  .main-menu--listable {
+    display: none; }
+    @media screen and (max-width: 699px) {
+      .main-menu--listable {
+        display: block; }
+        .main-menu--listable .main-menu-item {
+          display: block; } }
+    .w600 .main-menu--listable {
+      display: block; }
+      .w600 .main-menu--listable .main-menu-item {
+        display: block; }
+    .w400 .main-menu--listable {
+      display: block; }
+      .w400 .main-menu--listable .main-menu-item {
+        display: block; }
+    .w320 .main-menu--listable {
+      display: block; }
+      .w320 .main-menu--listable .main-menu-item {
+        display: block; }
+    .w280 .main-menu--listable {
+      display: block; }
+      .w280 .main-menu--listable .main-menu-item {
+        display: block; }
 
 .main-menu-item {
   font: 15px "Soho Gothic Pro", Helvetica, Arial, sans-serif;
@@ -542,6 +745,11 @@ a {
       width: 280px; } }
   .w320 .page-container {
     width: 280px !important; }
+  @media screen and (max-width: 279px) {
+    .page-container {
+      width: 280px; } }
+  .w280 .page-container {
+    width: 280px !important; }
   @media screen and (max-width: 399px) {
     .page-container {
       padding: 0 15px; } }
@@ -570,6 +778,9 @@ a {
     width: 100%;
     box-sizing: border-box; }
   .w320 .quote-box {
+    width: 100%;
+    box-sizing: border-box; }
+  .w280 .quote-box {
     width: 100%;
     box-sizing: border-box; }
   .quote-box__header {
@@ -692,12 +903,6 @@ a {
     font: 12.59px "Soho Gothic Pro";
     line-height: 200%; }
 
-body {
-  padding: 50px;
-  font: 15px "Soho Gothic Pro", Arial, sans-serif; }
-
-a {
-  color: #00B7FF; }
 
 /*
 @mixin make-row($columns) {
