--- a/public/sass/header.scss
+++ b/public/sass/header.scss
@@ -47,6 +47,11 @@ $logo-height: 55px;
     font: 22.94px "Soho Gothic Pro", Arial, sens-serif;
     color: $logo-color;
     text-transform: uppercase;
+
+
+    @include responsive(600) {
+      display: none;
+    }
   }
 }
 
@@ -65,10 +70,15 @@ $logo-height: 55px;
   display: table;
   width: 100%;
   padding-bottom: 10px;
-  box-sizing: border-box;;
+  box-sizing: border-box;
 
   &__title{
     font: 31px "Soho Gothic Pro", Arial, sens-serif;
+
+    @include responsive(700) {
+      font: 18px "Soho Gothic Pro", Arial, sens-serif;
+    }
+
     font-weight: 400;
     line-height: 100%;
     color: #fff;
@@ -85,6 +95,10 @@ $app-links-bg-color: #e7e6e6;
   background-color: $app-links-bg-color;
   height: 120px;
   margin-bottom: 25px;
+
+  @include responsive(700) {
+    height: auto;
+  }
 
   position: relative;
 
@@ -116,11 +130,22 @@ $app-links-bg-color: #e7e6e6;
   box-sizing: border-box;
   padding: 0 30px;
 
+  @include responsive(700) {
+    display: block;
+    padding: 15px 30px;
+  }
+
   &__element {
     display: table-cell;
     text-align: center;
     vertical-align: top;
     width: 33.333%;
+
+    @include responsive(700) {
+      display: block;
+      text-align: left;
+      width: auto;
+    }
   }
 }
 .app-link {
@@ -128,7 +153,12 @@ $app-links-bg-color: #e7e6e6;
   text-decoration: none;
   outline: none;
 
+  @include responsive(700) {
+    margin-bottom: 10px;
+  }
+
   $app-link-size: 100px;
+  $app-link-size-sm: 30px;
   $app-link-border-width: 3px;
 
   &__img {
@@ -145,27 +175,50 @@ $app-links-bg-color: #e7e6e6;
     width: $app-link-size;
     height: $app-link-size;
 
+    @include responsive(700) {
+      margin-top: 0;
+      width: $app-link-size-sm;
+      height: $app-link-size-sm;
+      box-sizing: border-box;
+    }
+
     .app-link--hover &, .app-link:hover & {
       margin-top: -25px - $app-link-border-width;
       margin-bottom: 0;
 
       width: $app-link-size + 2 * $app-link-border-width;
       height: $app-link-size + 2 * $app-link-border-width;
+
+      @include responsive(700) {
+        margin-top: 0;
+        width: $app-link-size-sm;
+        height: $app-link-size-sm;
+      }
+
       background-color: rgba(255, 255, 255, 0.6);
       &:before {
-        content: "";
+        background-color: #fff;
+        border: #c3c3c3 1px solid;
       }
     }
 
     &:before {
       position: absolute;
+      content: "";
       top: $app-link-border-width;
       left: $app-link-border-width;
+
       width: $app-link-size;
       height: $app-link-size;
+
+      @include responsive(700) {
+        width: $app-link-size-sm;
+        height: $app-link-size-sm;
+      }
+
       border-radius: 50%;
-      background-color: #fff;
-      border: #c3c3c3 1px solid;
+      background-color: rgba(0,0,0,0);
+      border: rgba(0,0,0,0) 1px solid;
       box-sizing: border-box;
     }
 
@@ -178,11 +231,21 @@ $app-links-bg-color: #e7e6e6;
       left: -9999px;
       right: -9999px;
       margin: auto;
+
+      @include responsive(700) {
+        height: 35px;
+      }
     }
   }
   &__title {
     display: block;
     color: #000;
     font: 16px "Soho Gothic Pro", Arial, sens-serif;
+
+    @include responsive(700) {
+      display: inline-block;
+      margin-left: 20px;
+      vertical-align: top;
+    }
   }
 }
