--- a/public/sass/quote.scss
+++ b/public/sass/quote.scss
@@ -149,7 +149,7 @@
     &:before {
       content: "“";
       color: #b2b2b2;
-      font: 57.49px "Stencil D";
+      font: 57.49px "Stencil";
       position: absolute;
       top: 0;
       left: -2px;
