--- a/public/sass/page.scss
+++ b/public/sass/page.scss
@@ -20,7 +20,7 @@ a {
 }
 
 .page-paragraph {
-  font: 15px "Soho Gothic Pro";
+  font: 15px "Tahoma";
   font-weight: 400;
   margin: 15px 0;
   line-height: 120%;
